version/0.17/_sources/examples/legacy_standalone/02_edb_to_ipc2581.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "examples\legacy_standalone\02_edb_to_ipc2581.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_examples_legacy_standalone_02_edb_to_ipc2581.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_legacy_standalone_02_edb_to_ipc2581.py:


EDB: IPC2581 export
-------------------
This example shows how you can use PyEDB to export an IPC2581 file.

.. GENERATED FROM PYTHON SOURCE LINES 30-33

Perform required imports
~~~~~~~~~~~~~~~~~~~~~~~~
Perform required imports, which includes importing a section.

.. GENERATED FROM PYTHON SOURCE LINES 33-43

.. code-block:: Python


    import os

    import pyedb
    from pyedb.generic.general_methods import (
        generate_unique_folder_name,
        generate_unique_name,
    )
    from pyedb.misc.downloads import download_file








.. GENERATED FROM PYTHON SOURCE LINES 44-47

Download file
~~~~~~~~~~~~~
Download the AEDB file and copy it in the temporary folder.

.. GENERATED FROM PYTHON SOURCE LINES 47-58

.. code-block:: Python



    temp_folder = generate_unique_folder_name()
    targetfile = download_file("edb/ANSYS-HSD_V1.aedb", destination=temp_folder)


    ipc2581_file = os.path.join(temp_folder, "Ansys_Hsd.xml")

    print(targetfile)






.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    C:\Users\ansys\AppData\Local\Temp\pyedb_prj_D7R\edb/ANSYS-HSD_V1.aedb




.. GENERATED FROM PYTHON SOURCE LINES 59-62

Launch EDB
~~~~~~~~~~
Launch the :class:`pyedb.Edb` class, using EDB 2023 R2 and SI units.

.. GENERATED FROM PYTHON SOURCE LINES 62-66

.. code-block:: Python


    edb = pyedb.Edb(edbpath=targetfile, edbversion="2024.1")




.. rst-class:: sphx-glr-script-out

.. code-block:: pytb

    Traceback (most recent call last):
      File "C:\actions-runner\_work\pyedb\pyedb\examples\legacy_standalone\02_edb_to_ipc2581.py", line 63, in <module>
        edb = pyedb.Edb(edbpath=targetfile, edbversion="2024.1")
      File "C:\actions-runner\_work\pyedb\pyedb\.venv\lib\site-packages\pyedb\generic\design_types.py", line 108, in Edb
        from pyedb.dotnet.edb import Edb as app
      File "C:\actions-runner\_work\pyedb\pyedb\.venv\lib\site-packages\pyedb\dotnet\edb.py", line 115, in <module>
        from pyedb.workflow import Workflow
      File "C:\actions-runner\_work\pyedb\pyedb\.venv\lib\site-packages\pyedb\workflow.py", line 4, in <module>
        import pandas as pd
    ModuleNotFoundError: No module named 'pandas'




.. GENERATED FROM PYTHON SOURCE LINES 67-70

Parametrize net
~~~~~~~~~~~~~~~
Parametrize a net.

.. GENERATED FROM PYTHON SOURCE LINES 70-73

.. code-block:: Python


    edb.modeler.parametrize_trace_width("A0_N", parameter_name=generate_unique_name("Par"), variable_value="0.4321mm")


.. GENERATED FROM PYTHON SOURCE LINES 74-77

Cutout
~~~~~~
Create a cutout.

.. GENERATED FROM PYTHON SOURCE LINES 77-94

.. code-block:: Python

    signal_list = []
    for net in edb.nets.netlist:
        if "PCIe" in net:
            signal_list.append(net)
    power_list = ["GND"]
    edb.cutout(
        signal_list=signal_list,
        reference_list=power_list,
        extent_type="ConvexHull",
        expansion_size=0.002,
        use_round_corner=False,
        number_of_threads=4,
        remove_single_pin_components=True,
        use_pyaedt_extent_computing=True,
        extent_defeature=0,
    )


.. GENERATED FROM PYTHON SOURCE LINES 95-98

Plot cutout
~~~~~~~~~~~
Plot cutout before exporting to IPC2581 file.

.. GENERATED FROM PYTHON SOURCE LINES 98-101

.. code-block:: Python


    edb.nets.plot(None, None, color_by_net=True)


.. GENERATED FROM PYTHON SOURCE LINES 102-105

Create IPC2581 file
~~~~~~~~~~~~~~~~~~~
Create the IPC2581 file.

.. GENERATED FROM PYTHON SOURCE LINES 105-109

.. code-block:: Python


    edb.export_to_ipc2581(ipc2581_file, "inch")
    print("IPC2581 File has been saved to {}".format(ipc2581_file))


.. GENERATED FROM PYTHON SOURCE LINES 110-113

Close EDB
~~~~~~~~~
Close EDB.

.. GENERATED FROM PYTHON SOURCE LINES 113-115

.. code-block:: Python


    edb.close_edb()


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.406 seconds)


.. _sphx_glr_download_examples_legacy_standalone_02_edb_to_ipc2581.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: 02_edb_to_ipc2581.ipynb <02_edb_to_ipc2581.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: 02_edb_to_ipc2581.py <02_edb_to_ipc2581.py>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
